--- a/MemoryGame/MainWindow.xaml
+++ b/MemoryGame/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:MemoryGame"
         mc:Ignorable="d"
         Title="Find all of the matching cats" Height="450" Width="400">
-    <Grid>
+    <Grid x:Name="mainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
