--- a/MemoryGame/MainWindow.xaml
+++ b/MemoryGame/MainWindow.xaml
@@ -3,9 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MemoryGame"
         mc:Ignorable="d"
-        Title="Find all of the matching cats" Height="450" Width="400">
+        Title="Find all of the matching animals" Height="450" Width="400"
+        Background="Black"
+        Foreground="White">
     <Grid x:Name="mainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
